CSS style for the yt_controls fixed to be center aligned

--- a/css/content.css
+++ b/css/content.css
@@ -18,6 +18,8 @@
 #sp_controls {
 	/*background: white;*/
 	position: relative;
+	display: block;
+	margin: 0 auto;
 }
 
 #sp_buttons {
